Updated Galician Language

--- a/po/gl.po
+++ b/po/gl.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gnome-color-manager master\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2010-06-02 13:56+0200\n"
-"PO-Revision-Date: 2010-06-02 15:19+0200\n"
+"POT-Creation-Date: 2010-06-03 01:25+0200\n"
+"PO-Revision-Date: 2010-06-03 01:25+0200\n"
 "Last-Translator: Fran Diéguez <frandieguez@ubuntu.com>\n"
 "Language-Team: Galician <gnome@g11.net>\n"
 "MIME-Version: 1.0\n"
@@ -534,6 +534,7 @@ msgid ""
 "Please indicate if the screen you are trying to profile is an LCD, CRT or a "
 "projector."
 msgstr ""
+"Indique se a pantalla que está tentando perfilar é LCD, CRT ou un proxector."
 
 #. TRANSLATORS: title, the hardware calibration device does not support projectors
 #: ../src/gcm-calibrate.c:418
@@ -560,11 +561,15 @@ msgid ""
 "A higher precision profile provides higher accuracy in color matching but "
 "requires more time for reading the color patches."
 msgstr ""
+"Un perfil con maior precisión fornece unha maior exactitude na coincidencia "
+"de cores pero necesita máis tempo para ler os parches de cor."
 
 #. TRANSLATORS: this is the message body for the chart selection
 #: ../src/gcm-calibrate.c:488
 msgid "For a typical workflow, a normal precision profile is sufficient."
 msgstr ""
+"Para un fluxo de traballo normal é suficiente con un perfil de precisión "
+"normal."
 
 #. TRANSLATORS: dialog message, preface
 #: ../src/gcm-calibrate.c:493
@@ -591,6 +596,8 @@ msgid ""
 "You may want to consult the owner's manual for your display on how to "
 "achieve these settings."
 msgstr ""
+"Pode querer consultar o manual do propietario da súa pantalla para saber "
+"como lograr estas configuracións."
 
 #. TRANSLATORS: dialog message, bullet item
 #: ../src/gcm-calibrate.c:635
@@ -601,6 +608,7 @@ msgstr "Reiniciar o seu dispositivo aos valores predefinidos de fábrica."
 #: ../src/gcm-calibrate.c:638
 msgid "Disable dynamic contrast if your display has this feature."
 msgstr ""
+"Desactive o contraste dinámico se a súa pantalla ten esta característica."
 
 #. TRANSLATORS: dialog message, bullet item
 #: ../src/gcm-calibrate.c:641
@@ -608,6 +616,8 @@ msgid ""
 "Configure your display with custom color settings and ensure the RGB "
 "channels are set to the same values."
 msgstr ""
+"Configure a súa pantalla cos axustes de cor personalizados e asegúrese de "
+"que as canles RGB están configuradas cos mesmos valores."
 
 #. TRANSLATORS: dialog message, addition to bullet item
 #: ../src/gcm-calibrate.c:644
@@ -683,6 +693,8 @@ msgid ""
 "Please indicate if you want to profile a local printer, generate some "
 "reference images, or process some reference images."
 msgstr ""
+"Indique se quere perfilar unha impresora local, xerar algunhas imaxes de "
+"referencia ou procesar algunhas imaxes de referencia."
 
 #. TRANSLATORS: title, usually we can tell based on the EDID data or output name
 #: ../src/gcm-calibrate.c:1021
@@ -698,6 +710,8 @@ msgstr "Os ficheiros obxectivo de cor común non están instalados neste equipo.
 #: ../src/gcm-calibrate.c:1026
 msgid "Color target files are needed to convert the image to a color profile."
 msgstr ""
+"Necesítanse ficheiros de obxectivos de cores para converter a imaxe a un "
+"perfil de cor."
 
 #. TRANSLATORS: dialog message, asking if it's okay to install them
 #: ../src/gcm-calibrate.c:1028
@@ -707,7 +721,7 @@ msgstr "Quere que se instalen?"
 #. TRANSLATORS: dialog message, if the user has the target file on a CDROM then there's no need for this package
 #: ../src/gcm-calibrate.c:1030
 msgid "If you already have the correct file, you can skip this step."
-msgstr ""
+msgstr "Pode omitir este paso se xa corrixiu o ficheiro."
 
 #. TRANSLATORS: button, skip installing a package
 #: ../src/gcm-calibrate.c:1035 ../src/gcm-prefs.c:860
@@ -842,7 +856,7 @@ msgstr ""
 #. TRANSLATORS: message text, this is a lie. It will take more than a few minutes, but we don't want to scare the hapless user
 #: ../src/gcm-calibrate-manual.c:228
 msgid "It should only take a few minutes."
-msgstr ""
+msgstr "Só debería levar uns poucos minutos."
 
 #. TRANSLATORS: message text, when you're comparing colors, it helps if the image is a bit out of focus otherwise the
 #. * fovea (center bit of the eye) tries to 'pick out' a colour, rather than take the average reading
@@ -855,7 +869,7 @@ msgstr ""
 #. TRANSLATORS: message text, tell the use that they can go back and forwards, as the human eye sucks
 #: ../src/gcm-calibrate-manual.c:242
 msgid "You can repeat the calibration steps as many times as you want."
-msgstr ""
+msgstr "Pode repetir os pasos de calibración tantas veces como queira."
 
 #. TRANSLATORS: dialog title
 #: ../src/gcm-calibrate-manual.c:254
@@ -882,6 +896,8 @@ msgid ""
 "This display is now calibrated. You can change the current profile using the "
 "Color Profiles program."
 msgstr ""
+"Agora esta pantalla está calibrada. Pode cambiar o perfil actual usando o "
+"programa Perfiles de cor."
 
 #: ../src/gcm-cell-renderer-profile.c:80
 msgid "Default"
@@ -991,70 +1007,70 @@ msgstr "CMYK"
 #. TRANSLATORS: command line option
 #: ../src/gcm-fix-profile.c:124
 msgid "The description of the profile"
-msgstr ""
+msgstr "A descrición do perfil"
 
 #. TRANSLATORS: command line option
 #: ../src/gcm-fix-profile.c:127
 msgid "The copyright of the profile"
-msgstr ""
+msgstr "O copyright do perfil"
 
 #. TRANSLATORS: command line option
 #: ../src/gcm-fix-profile.c:130
 msgid "The model of the profile"
-msgstr ""
+msgstr "O modelo do perfil"
 
 #. TRANSLATORS: command line option
 #: ../src/gcm-fix-profile.c:133
 msgid "The manufacturer of the profile"
-msgstr ""
+msgstr "O fabricante do perfil"
 
 #. TRANSLATORS: command line option: a list of icc files to fix
 #: ../src/gcm-fix-profile.c:136
 msgid "Profiles to fix"
-msgstr ""
+msgstr "Perfiles que arranxar"
 
 #. TRANSLATORS: this fixes broken profiles
 #: ../src/gcm-fix-profile.c:147
 msgid "ICC profile fix program"
-msgstr ""
+msgstr "Programa para arranxar perfiles ICC"
 
 #. TRANSLATORS: command line option: a list of catalogs to install
 #. TRANSLATORS: command line option: a list of files to install
 #: ../src/gcm-import.c:83 ../src/gcm-install-system-wide.c:126
 msgid "ICC profile to install"
-msgstr ""
+msgstr "Perfil ICC para instalar"
 
 #. TRANSLATORS: nothing was specified on the command line
 #: ../src/gcm-import.c:105
 msgid "No filename specified"
-msgstr ""
+msgstr "Non se especificou ningún nome de ficheiro"
 
 #. TRANSLATORS: could not read file
 #: ../src/gcm-import.c:118
 msgid "Failed to open ICC profile"
-msgstr ""
+msgstr "Produciuse un fallo ao abrir o perfil ICC"
 
 #. TRANSLATORS: parsing error
 #: ../src/gcm-import.c:121
 #, c-format
 msgid "Failed to parse file: %s"
-msgstr ""
+msgstr "Produciuse un fallo ao analizar o ficheiro %s"
 
 #. TRANSLATORS: color profile already been installed
 #: ../src/gcm-import.c:156
 msgid "ICC profile already installed"
-msgstr ""
+msgstr "Perfil ICC xa instalado"
 
 #. TRANSLATORS: message text
 #: ../src/gcm-import.c:173
 #, c-format
 msgid "Import ICC color profile %s?"
-msgstr ""
+msgstr "Desexa importar o perfil de cor ICC %s?"
 
 #. TRANSLATORS: message text
 #: ../src/gcm-import.c:176
 msgid "Import ICC color profile?"
-msgstr ""
+msgstr "Desexa importar o perfil de cor ICC?"
 
 #. ask confirmation
 #: ../src/gcm-import.c:184
@@ -1169,27 +1185,27 @@ msgstr "Mostrar as propiedades de X11"
 #. TRANSLATORS: command line option
 #: ../src/gcm-inspect.c:598
 msgid "Get the profiles for a specific device"
-msgstr ""
+msgstr "Obter os perfiles para un dispositivo específico"
 
 #. TRANSLATORS: command line option
 #: ../src/gcm-inspect.c:601
 msgid "Get the profiles for a specific file"
-msgstr ""
+msgstr "Obter os perfiles para un ficheiro específico"
 
 #. TRANSLATORS: command line option
 #: ../src/gcm-inspect.c:604
 msgid "Get the profile for a specific window"
-msgstr ""
+msgstr "Obter o perfil para unha xanela específica"
 
 #. TRANSLATORS: command line option
 #: ../src/gcm-inspect.c:607
 msgid "Get the profiles for a specific device type"
-msgstr ""
+msgstr "Obter os perfiles para un tipo de dispositivo específico"
 
 #. TRANSLATORS: command line option
 #: ../src/gcm-inspect.c:610
 msgid "Dump all details about this system"
-msgstr ""
+msgstr "Envorcar todos os detalles sobre este sistema"
 
 #. TRANSLATORS: just dumps the EDID to disk
 #: ../src/gcm-inspect.c:623
@@ -1215,12 +1231,12 @@ msgstr ""
 #. TRANSLATORS: user did not specify a valid filename
 #: ../src/gcm-install-system-wide.c:149
 msgid "You need to specify exactly one ICC profile filename."
-msgstr ""
+msgstr "Debe especificar exactamente un nome de ficheiro de perfil ICC."
 
 #. TRANSLATORS: user did not specify a valid device ID
 #: ../src/gcm-install-system-wide.c:157
 msgid "You need to specify exactly one device ID."
-msgstr ""
+msgstr "Debe especificar exactamente un ID de dispositivo."
 
 #. TRANSLATORS: user did not specify a valid device ID
 #: ../src/gcm-install-system-wide.c:166
@@ -1245,12 +1261,12 @@ msgstr ""
 #. TRANSLATORS: the content type is the detected type of file
 #: ../src/gcm-install-system-wide.c:206
 msgid "Content type was incorrect:"
-msgstr ""
+msgstr "O tipo de contido era incorrecto:"
 
 #. TRANSLATORS: the program must never be directly run
 #: ../src/gcm-install-system-wide.c:215
 msgid "This program must only be run through pkexec."
-msgstr ""
+msgstr "Este programa só se pode executar mediante pkexec."
 
 #. TRANSLATORS: PolicyKit has gone all insane on us, and we refuse to parse junk
 #: ../src/gcm-install-system-wide.c:224
@@ -1306,28 +1322,29 @@ msgstr ""
 #. TRANSLATORS: this is where the user can click and import a profile
 #: ../src/gcm-prefs.c:191
 msgid "Other profile…"
-msgstr ""
+msgstr "Outro perfil"
 
 #. TRANSLATORS: could not calibrate
 #: ../src/gcm-prefs.c:325
 msgid "Failed to calibrate device"
-msgstr ""
+msgstr "Produciuse un fallo ao calibrar o dispositivo"
 
 #. TRANSLATORS: could not calibrate
 #: ../src/gcm-prefs.c:360
 msgid "Failed to calibrate printer"
-msgstr ""
+msgstr "Produciuse un fallo ao calibrar a impresora"
 
 #. TRANSLATORS: title, usually we can tell based on the EDID data or output name
 #: ../src/gcm-prefs.c:473
 msgid "Permanently delete profile?"
-msgstr ""
+msgstr "Desexa eliminar permanentemente o perfil?"
 
 #. TRANSLATORS: dialog message
 #: ../src/gcm-prefs.c:476
 msgid ""
 "Are you sure you want to remove this profile from your system permanently?"
 msgstr ""
+"Ten certeza que quere eliminar permanentemente este perfil do seu sistema?"
 
 #. TRANSLATORS: button, delete a profile
 #: ../src/gcm-prefs.c:479
@@ -1396,7 +1413,7 @@ msgstr ""
 #. TRANSLATORS: this is when the button is insensitive
 #: ../src/gcm-prefs.c:1598
 msgid "Cannot profile: No device is selected"
-msgstr ""
+msgstr "Non é posíbel perfilar: non hai ningún dispositivo seleccionado"
 
 #. TRANSLATORS: this is when the button is insensitive
 #: ../src/gcm-prefs.c:1610
@@ -1554,7 +1571,7 @@ msgstr "Non foi posíbel importar o perfíl"
 
 #: ../src/gcm-prefs.c:2390
 msgid "The profile was of the wrong type for this device"
-msgstr ""
+msgstr "O perfil era do tipo erróneo para este dispositivo"
 
 #. TRANSLATORS: this is a sound description
 #: ../src/gcm-prefs.c:2473
@@ -1616,7 +1633,7 @@ msgstr ""
 #. TRANSLATORS: this is where the ICC profile_lcms1 has no description
 #: ../src/gcm-profile.c:132
 msgid "Missing description"
-msgstr ""
+msgstr "Falta a descrición"
 
 #. TRANSLATORS: button: this is to open GCM
 #: ../src/gcm-session.c:108
@@ -1656,7 +1673,7 @@ msgstr "Xestión de cor"
 
 #: ../src/gcm-session.c:701
 msgid "Color Management D-Bus Service"
-msgstr ""
+msgstr "Servizo D-Bus de xestión de cor"
 
 #. TRANSLATORS: this is the profile creation date strftime format
 #: ../src/gcm-utils.c:594
@@ -1840,11 +1857,11 @@ msgstr "Engadir un perfil de cor novo"
 #. This is a button to add a virtual device
 #: ../data/gcm-prefs.ui.h:6
 msgid "Add d_evice&#x2026;"
-msgstr ""
+msgstr "Engadir di_spositivo#x2026;"
 
 #: ../data/gcm-prefs.ui.h:7
 msgid "Adds a virtual device that is not connected."
-msgstr ""
+msgstr "Engade un dispositivo virtual que non está conectado."
 
 #. Profiles that can be added to the device
 #: ../data/gcm-prefs.ui.h:9
@@ -1947,6 +1964,8 @@ msgstr "Axuste fino"
 msgid ""
 "Image files can be dragged on this window to auto-complete the above fields."
 msgstr ""
+"Pódense soltar ficheiros de imaxe nesta xanela para autocompletar os campos "
+"superiores."
 
 #. The licence of the profile, normally non-free
 #: ../data/gcm-prefs.ui.h:57
@@ -1955,7 +1974,7 @@ msgstr "Licencia:"
 
 #: ../data/gcm-prefs.ui.h:58
 msgid "Make the selected profile the default profile"
-msgstr ""
+msgstr "Facer o perfil seleccionado o predefinido"
 
 #. The manufacturer of the device
 #: ../data/gcm-prefs.ui.h:60
@@ -2020,7 +2039,7 @@ msgstr "_Restabelecer"
 
 #: ../data/gcm-prefs.ui.h:82
 msgid "Reset the sliders to the default values"
-msgstr ""
+msgstr "Restabelecer os deslizadores aos valores predefinidos"
 
 #: ../data/gcm-prefs.ui.h:83
 msgid "Save these profiles for all users"
