--- a/po/gl.po
+++ b/po/gl.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gnome-color-manager master\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2010-06-03 01:30+0200\n"
-"PO-Revision-Date: 2010-06-03 01:25+0200\n"
+"POT-Creation-Date: 2010-06-03 23:52+0200\n"
+"PO-Revision-Date: 2010-06-04 00:10+0200\n"
 "Last-Translator: Fran Diéguez <frandieguez@ubuntu.com>\n"
 "Language-Team: Galician <gnome@g11.net>\n"
 "MIME-Version: 1.0\n"
@@ -747,6 +747,8 @@ msgid ""
 "Before profiling the device, you have to manually capture an image of a "
 "calibrated target and save it as a TIFF image file."
 msgstr ""
+"Antes de perfilar o dispositivo debe adquirir manualmente unha imaxe dun "
+"obxectivo calibrado e gardala como un ficheiro de imaxe TIFF."
 
 #. TRANSLATORS: dialog message, preface
 #: ../src/gcm-calibrate.c:1060
@@ -754,6 +756,8 @@ msgid ""
 "Ensure that the contrast and brightness are not changed and color correction "
 "profiles are not applied."
 msgstr ""
+"Asegúrese de que o contraste e brillo non se cambian e que non se aplican "
+"perfiles de corrección de cor."
 
 #. TRANSLATORS: dialog message, suffix
 #: ../src/gcm-calibrate.c:1063
@@ -761,6 +765,8 @@ msgid ""
 "The device sensor should have been cleaned prior to scanning and the output "
 "file resolution should be at least 200dpi."
 msgstr ""
+"O sensor do dispositivo debería terse limpado antes do análise e a "
+"resolución do ficheiro de saída debería ser cando menos 200dpi."
 
 #. TRANSLATORS: dialog message, preface
 #: ../src/gcm-calibrate.c:1069
@@ -768,6 +774,8 @@ msgid ""
 "Ensure that the white-balance has not been modified by the camera and that "
 "the lens is clean."
 msgstr ""
+"Asegúrese de que a cámara non modificara o balance de brancos e que a lente "
+"está limpa."
 
 #. TRANSLATORS: dialog message, suffix
 #: ../src/gcm-calibrate.c:1073
@@ -775,11 +783,14 @@ msgid ""
 "For best results, the reference target should also be less than two years "
 "old."
 msgstr ""
+"Para un mellor resultado, o obxectivo de referencia tamén deberá ter menos "
+"de dous anos de antigüidade."
 
 #. TRANSLATORS: this is the message body for the chart selection
 #: ../src/gcm-calibrate.c:1076
 msgid "Please select the chart type which corresponds to your reference file."
 msgstr ""
+"Seleccione o tipo de gráfico que corresponde co seu ficheiro de referencia."
 
 #. TRANSLATORS: this is probably a brand name
 #: ../src/gcm-calibrate-dialog.c:556
@@ -865,6 +876,8 @@ msgid ""
 "It may help to sit further from the screen or to squint at the calibration "
 "images in order to accurately compare the colors."
 msgstr ""
+"Pode axudar sentarse máis lonxe da pantalla e entornar os ollos nas imaxes "
+"de calibración para comparar as cores con precisión."
 
 #. TRANSLATORS: message text, tell the use that they can go back and forwards, as the human eye sucks
 #: ../src/gcm-calibrate-manual.c:242
@@ -884,6 +897,9 @@ msgid ""
 "bars. You should match the brightness first, and then if required change the "
 "color tint so it looks plain gray."
 msgstr ""
+"Tente que coincida o cadrado gris coas barras alternantes. Debería axustar "
+"primeiro o brillo e despois, se é necesario, cambiar o tinte de cor para que "
+"pareza gris plano."
 
 #. TRANSLATORS: dialog title
 #: ../src/gcm-calibrate-manual.c:372
@@ -1140,17 +1156,17 @@ msgstr "Perfiles axeitados para:"
 #. TRANSLATORS: no profile has been asigned to this device
 #: ../src/gcm-inspect.c:272
 msgid "There are no ICC profiles assigned to this file"
-msgstr ""
+msgstr "Non existen perfiles asignados a este ficheiro"
 
 #. TRANSLATORS: no profile has been asigned to this window
 #: ../src/gcm-inspect.c:404
 msgid "There are no ICC profiles for this window"
-msgstr ""
+msgstr "Non existen perfiles ICC para esta xanela"
 
 #. TRANSLATORS: no profile has been asigned to this device
 #: ../src/gcm-inspect.c:471
 msgid "There are no ICC profiles for this device type"
-msgstr ""
+msgstr "Non existen perfiles ICC para este tipo de dispositivo"
 
 #. TRANSLATORS: this is the rendering intent of the output
 #: ../src/gcm-inspect.c:510
@@ -1241,22 +1257,22 @@ msgstr "Debe especificar exactamente un ID de dispositivo."
 #. TRANSLATORS: user did not specify a valid device ID
 #: ../src/gcm-install-system-wide.c:166
 msgid "The device ID has invalid characters."
-msgstr ""
+msgstr "O ID do dispositivo ten caracteres non válidos."
 
 #. TRANSLATORS: only able to install profiles as root
 #: ../src/gcm-install-system-wide.c:176
 msgid "This program can only be used by the root user."
-msgstr ""
+msgstr "Este programa só o pode usar o administrador."
 
 #. TRANSLATORS: only able to install profiles with an absolute path
 #: ../src/gcm-install-system-wide.c:185
 msgid "The source filename must be absolute."
-msgstr ""
+msgstr "O nome do ficheiro de orixe debe ser absoluto."
 
 #. TRANSLATORS: error details
 #: ../src/gcm-install-system-wide.c:196
 msgid "Failed to get content type:"
-msgstr ""
+msgstr "Produciuse un fallo ao obter o tipo de contido:"
 
 #. TRANSLATORS: the content type is the detected type of file
 #: ../src/gcm-install-system-wide.c:206
@@ -1271,17 +1287,17 @@ msgstr "Este programa só se pode executar mediante pkexec."
 #. TRANSLATORS: PolicyKit has gone all insane on us, and we refuse to parse junk
 #: ../src/gcm-install-system-wide.c:224
 msgid "PKEXEC_UID must be set to an integer value."
-msgstr ""
+msgstr "Débese estabelecer PKEXEC_UID a un valor enteiro."
 
 #. TRANSLATORS: we are complaining that a file must be really owned by the user who called this program
 #: ../src/gcm-install-system-wide.c:233
 msgid "The ICC profile must be owned by the user."
-msgstr ""
+msgstr "O usuario debe ser o propietario do perfil ICC."
 
 #. TRANSLATORS: only able to install profiles with an absolute path
 #: ../src/gcm-install-system-wide.c:246
 msgid "The destination filename must be absolute."
-msgstr ""
+msgstr "O nome do ficheiro de destino debe ser absoluto."
 
 #. TRANSLATORS: error details
 #: ../src/gcm-install-system-wide.c:256
@@ -1291,7 +1307,7 @@ msgstr "Produciuse un fallo ao copiar:"
 #. TRANSLATORS: this is displayed the user has not got suitable hardware
 #: ../src/gcm-picker.c:277
 msgid "The attached colorimeter is not capable of reading a spot color."
-msgstr ""
+msgstr "O colorímetro anexado non é capaz de ler un punto de cor."
 
 #. TRANSLATORS: this is displayed the user has not got suitable hardware
 #: ../src/gcm-picker.c:280
@@ -1302,22 +1318,22 @@ msgstr "Non hai ningún colorímetro conectado."
 #: ../src/gcm-picker.c:468 ../src/gcm-prefs.c:2749
 #, c-format
 msgid "No %s color spaces available"
-msgstr ""
+msgstr "Non existen espazos de cor %s dispoñíbeis"
 
 #. TRANSLATORS: we can make this modal (stay on top of) another window
 #: ../src/gcm-picker.c:498 ../src/gcm-prefs.c:3141
 msgid "Set the parent window to make this modal"
-msgstr ""
+msgstr "Estabelecer a xanela pai para facelo modal"
 
 #. TRANSLATORS: tool that is used to pick colors
 #: ../src/gcm-picker.c:518
 msgid "GNOME Color Manager Color Picker"
-msgstr ""
+msgstr "Selector de cor do Xestor de cor de GNOME"
 
 #. TRANSLATORS: could not save for all users
 #: ../src/gcm-prefs.c:163
 msgid "Failed to save defaults for all users"
-msgstr ""
+msgstr "Produciuse un fallo ao gardar os predefinidos para todos os usuarios"
 
 #. TRANSLATORS: this is where the user can click and import a profile
 #: ../src/gcm-prefs.c:191
@@ -1408,7 +1424,7 @@ msgstr "Produciuse un fallo ao eliminar o ficheiro"
 #. TRANSLATORS: this is when the button is sensitive
 #: ../src/gcm-prefs.c:1593
 msgid "Create a color profile for the selected device"
-msgstr ""
+msgstr "Crear un perfil de cor para o dispositivo seleccionado"
 
 #. TRANSLATORS: this is when the button is insensitive
 #: ../src/gcm-prefs.c:1598
@@ -1418,33 +1434,36 @@ msgstr "Non é posíbel perfilar: non hai ningún dispositivo seleccionado"
 #. TRANSLATORS: this is when the button is insensitive
 #: ../src/gcm-prefs.c:1610
 msgid "Cannot calibrate: The display device is not connected"
-msgstr ""
+msgstr "Non é posíbel calibrar: o dispositivo non está conectado"
 
 #. TRANSLATORS: this is when the button is insensitive
 #: ../src/gcm-prefs.c:1618
 msgid "Cannot calibrate: The display driver does not support XRandR 1.3"
 msgstr ""
+"Non é posíbel calibrar: o controlador da pantalla non admite XRandR 1.3"
 
 #. TRANSLATORS: this is when the button is insensitive
 #: ../src/gcm-prefs.c:1626
 msgid "Cannot calibrate: The measuring instrument is not plugged in"
-msgstr ""
+msgstr "Non é posíbel calibrar: o instrumento de medición non está conectado"
 
 #. TRANSLATORS: this is when the button is insensitive
 #: ../src/gcm-prefs.c:1641
 msgid "Cannot profile: The measuring instrument is not plugged in"
-msgstr ""
+msgstr "Non é posíbel perfilar: o instrumento de medición non está conectado"
 
 #. TRANSLATORS: this is when the button is insensitive
 #: ../src/gcm-prefs.c:1649
 msgid ""
 "Cannot profile: The measuring instrument does not support printer profiling"
 msgstr ""
+"Non é posíbel perfilar: o instrumento de medición non admite o perfilado de "
+"impresión"
 
 #. TRANSLATORS: this is when the button is insensitive
 #: ../src/gcm-prefs.c:1656
 msgid "Cannot profile this type of device"
-msgstr ""
+msgstr "Non é posíbel perfilar este tipo de dispositovos"
 
 #. TRANSLATORS: Some shitty binary drivers do not support per-head gamma controls.
 #. * Whilst this does not matter if you only have one monitor attached, it means you
@@ -1452,6 +1471,8 @@ msgstr ""
 #: ../src/gcm-prefs.c:1734
 msgid "Per-device settings not supported. Check your display driver."
 msgstr ""
+"Non se admiten os axustes por dispositivo. Comprobe o controlador da súa "
+"pantalla."
 
 #. TRANSLATORS: this the ICC profile type
 #: ../src/gcm-prefs.c:1848
@@ -1624,11 +1645,13 @@ msgid ""
 "This profile does not have the information required for whole-screen color "
 "correction."
 msgstr ""
+"Este perfil non ten a información necesaria para a corrección de cor da "
+"pantalla enteira."
 
 #. TRANSLATORS: this is displayed when the profile is crap
 #: ../src/gcm-prefs.c:3445
 msgid "More color profiles could be automatically installed."
-msgstr ""
+msgstr "Poderiase instalar automaticamente máis perfiles de cor. "
 
 #. TRANSLATORS: this is where the ICC profile_lcms1 has no description
 #: ../src/gcm-profile.c:132
@@ -1654,17 +1677,17 @@ msgstr "Necesítase o recalibrado"
 #: ../src/gcm-session.c:148
 #, c-format
 msgid "The display '%s' should be recalibrated soon."
-msgstr ""
+msgstr "Debería recalibrarse a pantalla «%s» pronto."
 
 #. TRANSLATORS: this is when the printer has not been recalibrated in a while
 #: ../src/gcm-session.c:155
 #, c-format
 msgid "The printer '%s' should be recalibrated soon."
-msgstr ""
+msgstr "Debería recalibrarse a impresora «%s» pronto"
 
 #: ../src/gcm-session.c:683
 msgid "Do not exit after the request has been processed"
-msgstr ""
+msgstr "Non saír despois de que se procesara a solicitude"
 
 #. TRANSLATORS: program name, a session wide daemon to watch for updates and changing system state
 #: ../src/gcm-session.c:699 ../data/gcm-prefs.ui.h:15
@@ -1678,7 +1701,7 @@ msgstr "Servizo D-Bus de xestión de cor"
 #. TRANSLATORS: this is the profile creation date strftime format
 #: ../src/gcm-utils.c:594
 msgid "%B %e %Y, %I:%M:%S %p"
-msgstr ""
+msgstr "%e de %B de %Y, %H:%M:%S"
 
 #. TRANSLATORS: rendering intent: you probably want to google this
 #: ../src/gcm-utils.c:607
@@ -1839,6 +1862,8 @@ msgid ""
 "A working space is a default colorspace that is not associated with a "
 "specific device."
 msgstr ""
+"Un espazo de traballo é o espazo de cor predefinido que non está asociado "
+"con un dispositivo específico."
 
 #: ../data/gcm-prefs.ui.h:2
 msgid ""
@@ -1910,6 +1935,8 @@ msgid ""
 "Delete the disconnected device - if you reconnect the device it will "
 "reappear in the list"
 msgstr ""
+"Eliminar o dispositivo desconectado; se reconecta o dispositivo volverá a "
+"aparecer na lista"
 
 #. Section heading for device settings
 #: ../data/gcm-prefs.ui.h:33
@@ -1993,7 +2020,7 @@ msgstr "Máis detalles"
 #. Some profiles are not compatible with some devices
 #: ../data/gcm-prefs.ui.h:65
 msgid "Only profiles that are compatible with the device will be listed above."
-msgstr ""
+msgstr "Embaixo só se mostrarán os perfiles compatíbeis co dispositivo."
 
 #: ../data/gcm-prefs.ui.h:66
 msgid "Open the documentation"
@@ -2018,6 +2045,8 @@ msgid ""
 "Program the video card with the adjusted color values so all windows are "
 "color corrected"
 msgstr ""
+"Programar a tarxeta de vídeo cos valores de cor axustados para que todas as "
+"xanelas teñan a cor correcta"
 
 #: ../data/gcm-prefs.ui.h:76
 msgid "Remove a color profile for this device"
@@ -2030,7 +2059,7 @@ msgstr "Quitar dispositi_vo"
 
 #: ../data/gcm-prefs.ui.h:79
 msgid "Rendering intent"
-msgstr ""
+msgstr "Modo de renderizado"
 
 #. This resets the device to it's defaults, and removes any user tweaked settings.
 #: ../data/gcm-prefs.ui.h:81
@@ -2049,10 +2078,12 @@ msgstr "Gardar estes perfiles para todos os usuarios"
 msgid ""
 "Set a property on the system so applications use the default display profile"
 msgstr ""
+"Estabelecer unha propiedade no sistema para que os aplicativos usen o perfil "
+"de pantalla predefinido"
 
 #: ../data/gcm-prefs.ui.h:87
 msgid "Set profile for _color managed applications"
-msgstr ""
+msgstr "Estabelecer o perfil de _cor para os aplicativos xestionados"
 
 #. Technical color word for softproof rendering intent
 #: ../data/gcm-prefs.ui.h:89
@@ -2064,30 +2095,37 @@ msgid ""
 "The rendering intent defines how color should be transformed from one "
 "colorspace to another."
 msgstr ""
+"O modo de renderizado define como se debe transformar a cor dun espazo de "
+"cor a outro."
 
 #: ../data/gcm-prefs.ui.h:91
 msgid "The rendering intent is how one gamut size is mapped to another."
-msgstr ""
+msgstr "O odo de renderizado é como se mapea unha gama de cor a outra."
 
 #: ../data/gcm-prefs.ui.h:92
 msgid ""
 "The rendering intent to use when transforming from the image gamut to the "
 "device output gamut"
 msgstr ""
+"O modo de renderizado que usar ao transformar a gama de cor dunha imaxe á "
+"gama de cor do dispositivo de saída."
 
 #: ../data/gcm-prefs.ui.h:93
 msgid ""
 "The rendering intent to use when transforming from the image gamut to the "
 "display gamut"
 msgstr ""
+"O modo de renderizado que usar ao transformar a gama de cor dunha imaxe á "
+"gama de cor de pantalla."
 
 #: ../data/gcm-prefs.ui.h:94
 msgid "These settings control how color management is applied to your desktop."
 msgstr ""
+"Estas opcións controlan como se aplica a xestión de cor no seu escritorio."
 
 #: ../data/gcm-prefs.ui.h:95
 msgid "This is the default CMYK working space to use in applications"
-msgstr ""
+msgstr "Este é o espazo de cor CMYK predefinido para usar en aplicativos"
 
 #: ../data/gcm-prefs.ui.h:96
 msgid "This is the default RGB working space to use in applications"
