l10n: Updated Greek translation for gnome-color-manager documentation

--- a/help/el/el.po
+++ b/help/el/el.po
@@ -545,5 +545,5 @@ msgstr "Αυτό το πρόγραμμα διανέμεται υπό τους ό
 #. Put one translator per line, in the form of NAME <EMAIL>, YEAR1, YEAR2
 #: C/gnome-color-manager.xml:0(None)
 msgid "translator-credits"
-msgstr "Μνεία μεταφραστών"
+msgstr "Michael Kotsarinis <mk73628@hotmail.com>, 2010"
 
